# BangumiBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENCE  README.md  README_ZH.md  compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: autopep8.yml  docker.yml  style.yml  test.yml
bangumi/: __init__.py  api.py  bangumi.py
bangumi/api/: __init__.py  app.py  parser.py  rss.py  stat.py  torrent.py
bangumi/consts/: env.py
bangumi/database/: __init__.py  redis_db.py
bangumi/downloader/: __init__.py  aria2.py  aria2_downloader.py  downloader.py  pikpak.py  qbittorrent.py  transmission.py
bangumi/entitiy/: Episode.py  __init__.py  configurable.py  download_item.py  episode.py  rss.py  wait_download_item.py
bangumi/manager/: __init__.py  config.py  notification.py
bangumi/parser/: __init__.py  ai_parse.py  parser.py
bangumi/rss/: __init__.py  dmhy.py  mikan.py  rss.py  rss_parser.py
bangumi/shared/: __init__.py  local_refresh.py
bangumi/util/: __init__.py  const.py  data_class.py  datetime.py  decorator.py  files.py  logger.py  plugin.py  rss.py  torrent.py  url.py
conf/: log.yml
config/: notification.json
config_example/: notification.json  rss.json
docker/aria2/: compose.yml
docker/qbittorrent/: compose.yml
docker/standalone/: compose.yml
docker/transmission/: compose.yml
tests/: test_notification.py  test_parser.py  test_path.py  test_re.py  test_rss.py  test_util.py
